--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             --neon-purple: #7000ff;
             --neon-red: #ff0055;
             --dark-bg: #020408;
-            --card-bg: rgba(13, 18, 29, 0.95);
+            --card-bg: rgba(13, 18, 29, 0.98);
         }
 
         body {
@@ -22,54 +22,70 @@
             margin: 0; padding: 0;
             display: flex; flex-direction: column; align-items: center;
             overflow-x: hidden;
-            background-image: radial-gradient(circle at 10% 20%, rgba(112, 0, 255, 0.1) 0%, transparent 40%),
-                              radial-gradient(circle at 90% 80%, rgba(0, 242, 255, 0.1) 0%, transparent 40%);
+            background-image: radial-gradient(circle at 50% 50%, #0d121d 0%, #020408 100%);
         }
 
-        header { width: 100%; padding: 60px 0 30px; text-align: center; }
+        header { width: 100%; padding: 50px 0 20px; text-align: center; }
 
         .bmg-logo {
             font-family: 'Black Ops One', cursive;
-            font-size: 6rem; margin: 0; line-height: 1;
+            font-size: 5.5rem; margin: 0; line-height: 1;
             color: #fff; text-transform: uppercase; letter-spacing: 8px;
             animation: neon-glow 3s ease-in-out infinite alternate;
         }
 
         @keyframes neon-glow {
-            from { text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px var(--neon-blue), 0 0 40px var(--neon-blue); }
-            to { text-shadow: 0 0 5px #fff, 0 0 10px var(--neon-purple), 0 0 20px var(--neon-purple), 0 0 30px var(--neon-purple); }
+            from { text-shadow: 0 0 10px #fff, 0 0 20px var(--neon-blue), 0 0 30px var(--neon-blue); }
+            to { text-shadow: 0 0 10px #fff, 0 0 20px var(--neon-purple), 0 0 30px var(--neon-purple); }
         }
 
-        .sub-logo { font-family: 'Orbitron'; font-size: 1.1rem; color: #ccc; letter-spacing: 3px; margin-top: 10px; font-weight: bold; }
+        .sub-logo { font-family: 'Orbitron'; font-size: 1rem; color: #888; letter-spacing: 3px; margin-top: 10px; font-weight: bold; }
 
-        .clock-container { margin: 20px auto; width: 90%; max-width: 450px; }
-        .digital-clock { background: rgba(0, 0, 0, 0.8); border: 2px solid rgba(0, 242, 255, 0.3); padding: 30px; border-radius: 20px; text-align: center; backdrop-filter: blur(10px); }
-        #timer { font-family: 'Orbitron', sans-serif; font-size: 3.5rem; color: var(--neon-blue); text-shadow: 0 0 20px var(--neon-blue); margin: 10px 0; }
+        .digital-clock { background: rgba(0, 0, 0, 0.85); border: 1px solid var(--neon-blue); padding: 25px; border-radius: 20px; text-align: center; box-shadow: 0 0 20px rgba(0, 242, 255, 0.1); margin: 20px 0; width: 90%; max-width: 400px; }
+        #timer { font-family: 'Orbitron', sans-serif; font-size: 3rem; color: var(--neon-blue); text-shadow: 0 0 15px var(--neon-blue); }
 
-        .social-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); gap: 12px; width: 95%; max-width: 700px; margin: 20px 0; }
-        .social-btn { display: flex; align-items: center; justify-content: center; gap: 8px; padding: 15px; border-radius: 12px; text-decoration: none; color: white; font-weight: bold; transition: 0.3s; }
+        .social-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); gap: 10px; width: 95%; max-width: 650px; margin: 20px 0; }
+        .social-btn { display: flex; align-items: center; justify-content: center; gap: 8px; padding: 14px; border-radius: 12px; text-decoration: none; color: white; font-weight: bold; font-size: 1rem; transition: 0.3s; }
         .btn-discord { background: #5865F2; } .btn-facebook { background: #1877F2; } .btn-whatsapp { background: #25D366; } .btn-telegram { background: #0088cc; }
-        .social-btn:hover { transform: scale(1.05); filter: brightness(1.2); }
+        .social-btn:hover { transform: translateY(-3px); filter: brightness(1.1); }
 
         .container {
-            width: 95%; max-width: 1300px;
-            display: grid; 
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            width: 95%; max-width: 1200px;
+            display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
             gap: 25px; padding: 40px 0 80px;
         }
 
-        .card { background: var(--card-bg); border-radius: 20px; overflow: hidden; border: 1px solid rgba(255, 255, 255, 0.05); transition: 0.4s; display: flex; flex-direction: column; }
-        .card:hover { border-color: var(--neon-blue); box-shadow: 0 0 30px rgba(0, 242, 255, 0.1); transform: translateY(-5px); }
-        .card img { width: 100%; height: 200px; object-fit: cover; image-rendering: -webkit-optimize-contrast; }
-        .card-content { padding: 20px; text-align: center; flex-grow: 1; }
-        .card-content h3 { font-family: 'Orbitron'; font-size: 1.2rem; margin-bottom: 15px; }
+        .card { 
+            background: var(--card-bg); border-radius: 15px; overflow: hidden; 
+            border: 1px solid rgba(255, 255, 255, 0.05); transition: 0.4s;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+        }
+        
+        .card:hover { border-color: var(--neon-blue); transform: translateY(-10px); }
 
-        .download-btn { display: inline-block; width: 100%; background: linear-gradient(45deg, var(--neon-purple), var(--neon-blue)); color: white; padding: 14px 0; text-decoration: none; border-radius: 10px; font-weight: bold; font-family: 'Orbitron'; }
+        .image-box { width: 100%; height: 210px; overflow: hidden; background: #000; }
 
-        .rules-btn { background: transparent; border: 2px solid var(--neon-red); color: var(--neon-red); padding: 12px 35px; border-radius: 50px; font-family: 'Orbitron'; font-weight: bold; cursor: pointer; margin-bottom: 20px; transition: 0.3s; }
+        .card img { 
+            width: 100%; height: 100%; object-fit: cover;
+            filter: contrast(1.1) brightness(1.1);
+            image-rendering: -webkit-optimize-contrast;
+            transition: 0.5s;
+        }
+
+        .card-content { padding: 25px; text-align: center; }
+        .card-content h3 { font-family: 'Orbitron'; font-size: 1.1rem; color: #fff; margin-bottom: 20px; }
+
+        .download-btn { 
+            display: inline-block; width: 100%; 
+            background: linear-gradient(45deg, var(--neon-purple), var(--neon-blue)); 
+            color: white; padding: 15px 0; text-decoration: none; 
+            border-radius: 10px; font-weight: bold; font-family: 'Orbitron';
+        }
+
+        .rules-btn { background: transparent; border: 2px solid var(--neon-red); color: var(--neon-red); padding: 12px 35px; border-radius: 50px; font-family: 'Orbitron'; font-weight: bold; cursor: pointer; transition: 0.3s; margin: 20px 0; }
         .rules-btn:hover { background: var(--neon-red); color: white; }
 
-        .messenger-float { position: fixed; bottom: 25px; right: 25px; background: #0084ff; color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 30px; z-index: 1000; text-decoration: none; }
+        .messenger-float { position: fixed; bottom: 30px; right: 30px; background: #0084ff; color: white; width: 65px; height: 65px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 32px; z-index: 1000; }
 
         footer { padding: 50px; color: #444; text-align: center; border-top: 1px solid rgba(255,255,255,0.05); width: 100%; }
     </style>
@@ -81,44 +97,33 @@
     <div class="sub-logo">BMG BUSSID Multiplayer</div>
 </header>
 
-<div class="clock-container">
-    <div class="digital-clock">
-        <span style="font-family: 'Orbitron'; font-size: 0.7rem; color: #555;">COUNTDOWN TO NEXT ROOM</span>
-        <div id="timer">00:00:00</div>
-        <div style="color: #888; font-size: 0.9rem;"><i class="fas fa-clock"></i> দুপুর ০২:৩০ | রাত ০৯:০০</div>
-    </div>
+<div class="digital-clock">
+    <div id="timer">00:00:00</div>
+    <div style="color: #666; font-size: 0.8rem; font-family: 'Orbitron';">NEXT MATCH COUNTDOWN</div>
 </div>
 
 <div class="social-grid">
     <a href="https://discord.gg/fUKA2MpFmn" class="social-btn btn-discord" target="_blank"><i class="fab fa-discord"></i> Discord</a>
-    <a href="https://www.facebook.com/groups/4203315063290851/" class="social-btn btn-facebook" target="_blank"><i class="fab fa-facebook-f"></i> Group</a>
+    <a href="https://www.facebook.com/groups/4203315063290851/" class="social-btn btn-facebook" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
     <a href="https://chat.whatsapp.com/KimQEIVWEYNI7AEiqMT4hs" class="social-btn btn-whatsapp" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
     <a href="https://t.me/khucra" class="social-btn btn-telegram" target="_blank"><i class="fab fa-telegram-plane"></i> Telegram</a>
 </div>
 
-<button class="rules-btn" onclick="toggleRules()">VIEW RULES</button>
-<div id="rules-content" style="display:none; width: 85%; max-width: 800px; background: rgba(255,0,0,0.05); padding: 25px; border-radius: 15px; border: 1px solid var(--neon-red); margin-bottom: 40px;">
-    <h3 style="color: var(--neon-red); margin-top:0;">🛑 Rules</h3>
-    <ul style="line-height: 1.8; color: #ccc; text-align: left;">
-        <li>১. লাইন মেনটেইন করে গাড়ি চালান।</li>
-        <li>২. স্পিড ৮০-১০০ কিমি/ঘণ্টার মধ্যে রাখুন।</li>
-        <li>৩. অকারণে হর্ন এবং ওভারটেক করবেন না।</li>
-    </ul>
-</div>
-
-<h2 style="font-family: 'Orbitron'; color: var(--neon-blue); letter-spacing: 2px;">LATEST MODS & SKINS</h2>
-
 <div class="container">
     <div class="card">
-        <img src="https://i.postimg.cc/SNC5FXKN/20260228-020918.jpg" alt="Saudia Bus">
+        <div class="image-box">
+            <img src="https://i.postimg.cc/SNC5FXKN/20260228-020918.jpg" alt="Saudia Bus">
+        </div>
         <div class="card-content">
-            <h3>SAUDIA PREMIUM (4K)</h3>
+            <h3>SAUDIA BMG SPECIAL (4K)</h3>
             <a href="https://drive.google.com/file/d/1TckotrGd1sy2boe1FVwqsiSRpR89iHgv/view?usp=drivesdk" class="download-btn" target="_blank">DOWNLOAD NOW</a>
         </div>
     </div>
 
     <div class="card">
-        <img src="https://i.postimg.cc/TphkDsjr/Photo-260226103343.jpg" alt="Hanif">
+        <div class="image-box">
+            <img src="https://i.postimg.cc/MKmgh2vr/Photo-260226103343.jpg" alt="Hanif">
+        </div>
         <div class="card-content">
             <h3>HANIF PREMIUM V2</h3>
             <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn" target="_blank">DOWNLOAD NOW</a>
@@ -126,9 +131,11 @@
     </div>
 
     <div class="card">
-        <img src="https://i.postimg.cc/ykrbpKYC/Chat-GPT-Image-Feb-27-2026-11-00-02-PM.png" alt="Multiplayer">
+        <div class="image-box">
+            <img src="https://i.postimg.cc/ykrbpKYC/Chat-GPT-Image-Feb-27-2026-11-00-02-PM.png" alt="Multiplayer">
+        </div>
         <div class="card-content">
-            <h3>ELITE MULTIPLAYER</h3>
+            <h3>ELITE MULTIPLAYER MOD</h3>
             <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn" target="_blank">DOWNLOAD NOW</a>
         </div>
     </div>
@@ -136,10 +143,9 @@
 
 <a href="https://m.me/61583460129028" target="_blank" class="messenger-float"><i class="fab fa-facebook-messenger"></i></a>
 
-<footer>&copy; 2026 BMG-BUSSID HUB | OFFICIAL COMMUNITY</footer>
+<footer>&copy; 2026 BMG-BUSSID HUB | DESIGNED BY JCT NISHAT</footer>
 
 <script>
-    function toggleRules() { var x = document.getElementById("rules-content"); x.style.display = (x.style.display === "block") ? "none" : "block"; }
     function updateTimer() {
         const now = new Date();
         const times = ["14:30:00", "21:00:00"]; 
